--- a/menu.html
+++ b/menu.html
@@ -123,7 +123,7 @@
         <a href="#">Urządzenia protetyczne</a>
         <a href="#">Komis mebli i urządzeń</a>
         <a href="#">O nas</a>
-        <a href="#">Kontakt</a>
+        <a href="kontakt.html">Kontakt</a>
     </nav>
 
     <div class="gallery">
