--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R.S Labor-Meble</title>
-         body {
+    <style>
+       body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
@@ -13,32 +14,33 @@
     align-items: center;
     background: url('tlo.jpg') center/cover fixed; /* Tło strony */
 }
+
 header {
-            width: 100%;
-            padding: 20px;
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
+    width: 100%;
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
 
-        header img {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            margin-right: 10px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
+header img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-right: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
-        h1 {
-            margin: 3cm 0 0; /* Przesunięcie o 3 cm w dół */
-            font-size: 1.5em;
-        }
+h1 {
+    margin: 1em 0 0; /* Przesunięcie o 1em w dół na większych ekranach */
+    font-size: 1.5em;
+}
 
 nav {
     width: 100%;
@@ -108,6 +110,7 @@ footer {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: auto;
 }
+
     </style>
 </head>
 <body>
@@ -122,7 +125,7 @@ footer {
         <a href="#">Urządzenia protetyczne</a>
         <a href="#">Komis mebli i urządzeń</a>
         <a href="#">O nas</a>
-        <a href="kontakt.html">Kontakt</a>
+        <a href="#">Kontakt</a>
     </nav>
 
     <div class="gallery">
