--- a/menu.html
+++ b/menu.html
@@ -119,7 +119,7 @@
 
     <nav>
         <a href="#">Meble protetyczne</a>
-        <a href="#">Meble stomatologiczne</a>
+        <a href="#">Meble do gabinetów stomatologicznych</a>
         <a href="#">Urządzenia protetyczne</a>
         <a href="#">Komis mebli i urządzeń</a>
         <a href="#">O nas</a>
