--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R.S Labor-Meble</title>
+    <title>R.S. Labor-Meble</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -114,7 +114,7 @@
 <body>
     <header>
         <img src="logo.png" alt="Logo Firmy">
-        <h1>R.S Labor Meble</h1>
+        <h1>R.S. Labor Meble</h1>
     </header>
 
     <nav>
