--- a/menu.html
+++ b/menu.html
@@ -40,6 +40,7 @@
         h1 {
             margin: 3cm 0 0; /* Przesunięcie o 3 cm w dół */
             font-size: 1.5em;
+            color: #000; /* Zmiana koloru tekstu na czarny */
         }
 
         nav {
@@ -58,7 +59,7 @@
             flex-basis: calc(50% - 20px);
             margin: 10px;
             text-decoration: none;
-            color: #333;
+            color: #000; /* Zmiana koloru tekstu na czarny */
             font-weight: bold;
             padding: 20px;
             border-radius: 8px;
@@ -104,7 +105,7 @@
             width: 100%;
             padding: 20px;
             background-color: #333;
-            color: #fff;
+            color: #000; /* Zmiana koloru tekstu na czarny */
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin-top: auto;
