--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,7 @@
         h1 {
             margin: 3cm 0 0; /* Przesunięcie o 3 cm w dół */
             font-size: 1.5em;
-            color: #000; /* Zmiana koloru tekstu na czarny */
+            color: #FFF; /* Zmiana koloru tekstu na czarny */
         }
 
         nav {
