--- a/menu.html
+++ b/menu.html
@@ -123,7 +123,7 @@
         <a href="#">Meble do gabinetów stomatologicznych</a>
         <a href="#">Urządzenia protetyczne</a>
         <a href="#">Komis mebli i urządzeń</a>
-        <a href="#">O nas</a>
+        <a href="meble_protetyczne.html">O nas</a>
         <a href="kontakt.html">Kontakt</a>
     </nav>
 
