--- a/menu.html
+++ b/menu.html
@@ -119,11 +119,11 @@
     </header>
 
     <nav>
-        <a href="#">Meble protetyczne</a>
+        <a href="meble_protetyczne.html">Meble protetyczne</a>
         <a href="#">Meble do gabinetów stomatologicznych</a>
         <a href="#">Urządzenia protetyczne</a>
         <a href="#">Komis mebli i urządzeń</a>
-        <a href="meble_protetyczne.html">O nas</a>
+        <a href="#">O nas</a>
         <a href="kontakt.html">Kontakt</a>
     </nav>
 
