--- a/kontakt.html
+++ b/kontakt.html
@@ -57,6 +57,26 @@
             color: #333;
         }
 
+        .back-link {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .back-link a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: 2px solid #333;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        .back-link a:hover {
+            background-color: #333;
+            color: #fff;
+        }
+
         footer {
             width: 100%;
             padding: 20px;
@@ -79,5 +99,13 @@
         <p>Adres: 63-714 Świnków, ul. Szkolna 3</p>
         <p>Nr. Telefonu: 887-068-062</p>
     </div>
+
+    <div class="back-link">
+        <a href="menu.html">Powrót do strony głównej</a>
+    </div>
+
+    <footer>
+        © 2024 R.S Labor Meble
+    </footer>
 </body>
 </html>
