--- a/kontakt.html
+++ b/kontakt.html
@@ -50,7 +50,6 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin: 20px;
             text-align: center;
-            flex-grow: 1; /* Rozszerzenie sekcji, aby wypełnić dostępną przestrzeń */
         }
 
         .contact-info p {
@@ -86,7 +85,7 @@
             color: #fff;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px; /* Dodanie marginesu nad stopką */
+            margin-top: auto; /* Umożliwia przesunięcie stopki na dół */
         }
     </style>
 </head>
