--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -103,9 +103,9 @@
 
     <div class="content">
         <div class="product">
-            <img src="mebel1_1.jpg" alt="Mebel Protetyczny 1">
-            <img src="mebel1_2.jpg" alt="Mebel Protetyczny 1">
-            <img src="mebel1_3.jpg" alt="Mebel Protetyczny 1">
+            <img src="zdjecie1.jpg" alt="Mebel Protetyczny 1">
+            <img src="zdjecie2.jpg" alt="Mebel Protetyczny 1">
+            <img src="zdjecie3.jpg" alt="Mebel Protetyczny 1">
             <div class="product-details">
                 <h2>Mebel Protetyczny 1</h2>
                 <p><strong>Opis:</strong> Nowoczesny mebel protetyczny zaprojektowany z myślą o ergonomii i funkcjonalności. Idealny do laboratoriów protetycznych.</p>
