--- a/menu.html
+++ b/menu.html
@@ -120,10 +120,10 @@
 
     <nav>
         <a href="meble_protetyczne.html">Meble protetyczne</a>
-        <a href="#">Meble do gabinetów stomatologicznych</a>
-        <a href="#">Urządzenia protetyczne</a>
-        <a href="#">Komis mebli i urządzeń</a>
-        <a href="#">O nas</a>
+        <a href="meble_stomatologiczne.html">Meble do gabinetów stomatologicznych</a>
+        <a href="urzadzenia_protetyczne.html">Urządzenia protetyczne</a>
+        <a href="komis.html">Komis mebli i urządzeń</a>
+        <a href="o_nas.html">O nas</a>
         <a href="kontakt.html">Kontakt</a>
     </nav>
 
