--- a/meble_stomatologiczne.html
+++ b/meble_stomatologiczne.html
@@ -117,13 +117,49 @@
             <img src="zdjecie3.jpg" alt="Zdjęcie 3">
         </div>
     </div>
+    <div class="content">
+        <div class="product">
+            <img src="zdjecie1.jpg" alt="Mebel Protetyczny 1">
+            <img src="zdjecie2.jpg" alt="Mebel Protetyczny 1">
+            <img src="zdjecie3.jpg" alt="Mebel Protetyczny 1">
+            <div class="product-details">
+                <h2>Mebel Protetyczny 1</h2>
+                <p><strong>Opis:</strong> Nowoczesny mebel protetyczny zaprojektowany z myślą o ergonomii i funkcjonalności. Idealny do laboratoriów protetycznych.</p>
+                <p><strong>Cena:</strong> 3000 PLN</p>
+                <p><strong>Wymiary:</strong> 120 cm x 60 cm x 75 cm</p>
+                <p><strong>Materiał:</strong> Stal nierdzewna, MDF, szkło hartowane</p>
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="mebel2_1.jpg" alt="Mebel Protetyczny 2">
+            <img src="mebel2_2.jpg" alt="Mebel Protetyczny 2">
+            <img src="mebel2_3.jpg" alt="Mebel Protetyczny 2">
+            <div class="product-details">
+                <h2>Mebel Protetyczny 2</h2>
+                <p><strong>Opis:</strong> Stylowy mebel protetyczny, który łączy nowoczesny design z wysoką funkcjonalnością. Doskonały wybór dla profesjonalnych laboratoriów.</p>
+                <p><strong>Cena:</strong> 4500 PLN</p>
+                <p><strong>Wymiary:</strong> 140 cm x 70 cm x 80 cm</p>
+                <p><strong>Materiał:</strong> Aluminium, płyta laminowana, szkło hartowane</p>
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="mebel3_1.jpg" alt="Mebel Protetyczny 3">
+            <img src="mebel3_2.jpg" alt="Mebel Protetyczny 3">
+            <img src="mebel3_3.jpg" alt="Mebel Protetyczny 3">
+            <div class="product-details">
+                <h2>Mebel Protetyczny 3</h2>
+                <p><strong>Opis:</strong> Kompaktowy mebel protetyczny, idealny do małych przestrzeni. Wyposażony w liczne schowki i powierzchnie robocze.</p>
+                <p><strong>Cena:</strong> 2500 PLN</p>
+                <p><strong>Wymiary:</strong> 100 cm x 50 cm x 70 cm</p>
+                <p><strong>Materiał:</strong> Stal nierdzewna, drewno, szkło hartowane</p>
+            </div>
+        </div>
+    </div>
 
     <div class="back-link">
         <a href="menu.html">Powrót do strony głównej</a>
     </div>
-
-    <footer>
-        © 2024 R.S Labor Meble
-    </footer>
 </body>
 </html>
