--- a/meble_stomatologiczne.html
+++ b/meble_stomatologiczne.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meble Protetyczne - R.S. Labor-Meble</title>
+    <title>Meble stomatologiczne - R.S. Labor-Meble</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -98,7 +98,7 @@
 </head>
 <body>
     <header>
-        <h1>Meble Protetyczne</h1>
+        <h1>Meble Stomatologiczne</h1>
     </header>
 
     <div class="content">
