--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -145,5 +145,8 @@
     <div class="back-link">
         <a href="menu.html">Powrót do strony głównej</a>
     </div>
+    <footer>
+        © 2024 R.S Labor Meble
+    </footer>
 </body>
 </html>
