--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -37,6 +37,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            flex: 1; /* Elastyczny kontener zawartości */
         }
 
         .product {
@@ -92,7 +93,6 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            margin-top: auto;
         }
     </style>
 </head>
@@ -145,6 +145,7 @@
     <div class="back-link">
         <a href="menu.html">Powrót do strony głównej</a>
     </div>
+
     <footer>
         © 2024 R.S Labor Meble
     </footer>
