--- a/meble_protetyczne.html
+++ b/meble_protetyczne.html
@@ -13,6 +13,7 @@
             flex-direction: column;
             align-items: center;
             background-color: #f4f4f4;
+            min-height: 100vh; /* Zapewnia, że body zajmie co najmniej całą wysokość widoku */
         }
 
         header {
@@ -93,6 +94,7 @@
             background-color: #333;
             color: #fff;
             text-align: center;
+            margin-top: auto; /* Przesunięcie stopki na dół */
         }
     </style>
 </head>
